tests/analyze/task-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `result 't9 'y`, but found `task int`.
> 6 | 	try x = ok 1
       ^^^^^^^^^^^^

error: Type mismatch: expected `result 't9 'y`, but found `task 't8`.
> 6 | 	try x = ok 1
       ^^^^^^^^^^^^
